# gemBS-smk

./: .gitignore  README.md  dependencies.md  pipeline_diagram.mermaid  pipeline_overview.md  pyproject.toml  test.json
.cache/fontconfig/: 3830d5c3ddfd5cd38a049b759396e72e-le64.cache-8  4c599c202bc5c08e2d34565a40eac3b2-le64.cache-8  7ef2298fde41cc6eeb7af42e48b7d293-le64.cache-8  d589a48862398ed80a3d6066f4f56f4c-le64.cache-8
config/: config.yml
config/schemas/: config.schema.yml  samples.schema.yml
notebooks/: encode_meta_to_csv.ipynb  encode_meta_to_csv.py  mohd_process.ipynb
profile/default/: config.yaml
profile/slurm/: config.yaml
profiles/default/: config.yaml
profiles/slurm/: config.yaml
workflow/: Snakefile
workflow/rules/: call.smk  common.smk  extract.smk  gembs_calls.smk  gembs_extract.smk  gembs_map.smk  gembs_report.smk  gemsbs_prepare_and_index.smk  indexing_1.smk  indexing_2.smk  indexing_abismal.smk  make_average_coverage.smk  make_bedmethyl_pearson_correlation.smk  make_conf.smk  make_coverage_bigwig.smk  make_gembs_metadata.smk  mapping.smk  mapping_abismal.smk  parse_map_qc_html.smk
workflow/rules/envs/: gem-mapper.yml
workflow/rules/scripts/: extract_signal.py  get_methylc_and_coverage.py  make_average_coverage.py  make_bedmethyl_pearson_correlation.py  make_bedmethyl_pearson_correlation_v2.py  make_ctg_beds.py  make_gembs_metadata.py  parse_map_qc_html.py  read_filter.py  rule.py
