[project]
name = "gembs-smk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "lxml>=5.4.0",
    "multiprocess>=0.70.18",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "pysam>=0.23.3",
    "qc-utils>=20.9.1",
    "snakemake>=9.5.1",
]
